--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="exercicios/condicionais/diferenca_entre_dois_numeros.js"></script>
+    
+    <script src="exercicios/sequenciais/media.js"></script>
+    <!--<script src="exercicios/sequenciais/receber_exibir_numero.js"></script>
+        <script src="exercicios/sequenciais/soma.js"></script>
+
+        <script src="exercicios/condicionais/diferenca_entre_dois_numeros.js"></script>
+    -->
 </body>
 </html>
