--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 </head>
 <body>
     
-    <script src="exercicios/sequenciais/media.js"></script>
-    <!--<script src="exercicios/sequenciais/receber_exibir_numero.js"></script>
+    <script src="exercicios/sequenciais/celcius_fahrenheit.js"></script>
+    <!--script src="exercicios/sequenciais/horas_salario.js"></script>
+        <script src="exercicios/sequenciais/dobro_do_quadrado.js"></script>
+        <script src="exercicios/sequenciais/metros_centimetros.js"></script>
+        <script src="exercicios/sequenciais/receber_exibir_numero.js"></script>
         <script src="exercicios/sequenciais/soma.js"></script>
-
+        <script src="exercicios/sequenciais/media.js"></script>
+        <script src="exercicios/sequenciais/raio.js"></script>
         <script src="exercicios/condicionais/diferenca_entre_dois_numeros.js"></script>
     -->
 </body>
