--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     
-    <script src="exercicios/sequenciais/celcius_fahrenheit.js"></script>
-    <!--script src="exercicios/sequenciais/horas_salario.js"></script>
+    <script src="exercicios/sequenciais/numeros_a_b_c.js"></script>
+    <!--<script src="exercicios/sequenciais/celcius_fahrenheit.js"></script>
+        <script src="exercicios/sequenciais/horas_salario.js"></script>
         <script src="exercicios/sequenciais/dobro_do_quadrado.js"></script>
         <script src="exercicios/sequenciais/metros_centimetros.js"></script>
         <script src="exercicios/sequenciais/receber_exibir_numero.js"></script>
